--- a/index.ipynb
+++ b/index.ipynb
@@ -114,9 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.16 s ± 12.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "clf = svm.SVC(C=5, gamma=0.05)\n",
     "%timeit clf.fit(X_train, y_train)"
@@ -124,9 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy: 1.0\tTesting Accuracy: 0.74\n"
+     ]
+    }
+   ],
    "source": [
     "train_acc = clf.score(X_train, y_train)\n",
     "test_acc = clf.score(X_test, y_test)\n",
